# scrolls-py

./: .gitignore  CHANGELOG.md  README.md  dev-requirements.txt  noxfile.py  setup.cfg
examples/: allowed_expansion_locations.scrl  arithmetic.scrl  brainfuck.bf  brainfuck.scrl  builtin_vars.scrl  c_to_f.scrl  comments.scrl  comparison.scrl  conditional.scrl  fibonacci.scrl  file_demo.scrl  fizzbuzz.scrl  fizzbuzz_horrible.scrl  functions.scrl  indirection.scrl  infinite_recursion.scrl  is_even.scrl  logic.scrl  missing_brace.scrl  missing_quote.scrl  quoted_literals.scrl  random.scrl  scopes.scrl  temp_converter.scrl  unified_commands.scrl
scrolls/: __init__.py  __main__.py  ast.py  builtins.py  commands.py  containers.py  datatypes.py  errors.py  interpreter.py
scrolls/ast/pdoc/: ast.md
scrolls/ext/: callbase.py
scrolls/ext/pdoc/: callbase.md
scrolls/interpreter/: __init__.py  callhandler.py  errors.py  run.py  state.py  struct.py
scrolls/interpreter/pdoc/: interpreter.md
scrolls/pdoc/: ast.md  builtins.md  interpreter.md  scrolls.md
tools/: README.md
