[metadata]
name = scrolls-py
version = 0.1.0
author = bison
author_email = aliteralbison@protonmail.com
description = A customizable interpreted microlanguage designed to run untrusted code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a-bison/scrolls-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
packages = scrolls
python_requires = >=3.9
